--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- sets the title of the page that shows up on the browser tab -->
     <title>Horiseon</title>
 </head>
 
 <body>
+    <!-- navigation -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
+            <!-- unordered list element -->
             <ul>
+                <!-- list item element -->
                 <li>
+                    <!-- anchor element -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -24,6 +29,7 @@
             </ul>
         </nav>
     </header>
+    <!-- hero section -->
     <section class="hero"></section>
     <section class="content">
         <div class="search-engine-optimization">
@@ -48,6 +54,7 @@
             </p>
         </div>
     </section>
+    <!-- aside section block of elements that appears on the bottom right of the page -->
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +78,7 @@
             </p>
         </div>
     </aside>
+    <!-- footer section -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
